--- a/src/main/resources/templates/pages/MainScreen.html
+++ b/src/main/resources/templates/pages/MainScreen.html
@@ -26,7 +26,7 @@
                 <li><a href="#inicio-web">Adotar Plantas</a></li>
                 <li><a href="/doarPlanta">Doar Plantas</a></li>
                 <li><a href="#contact">Atualizar Dados</a></li>
-                <li><a href="login.html">Logout</a></li>
+                <li><a href="/logout">Logout</a></li>
             </ul>
         </nav>
     </div>
