--- a/src/main/resources/templates/pages/doarPlanta.html
+++ b/src/main/resources/templates/pages/doarPlanta.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,7 @@
     <h2>Cadastrar Planta</h2>
     <section>
         <form action="/cadastrarImagem" enctype="multipart/form-data" th:object="${planta}" method="POST">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <div>
                 <input type="file" name="file">
             </div>
