--- a/src/main/resources/templates/pages/doarPlanta.html
+++ b/src/main/resources/templates/pages/doarPlanta.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="pt-BR" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Login</title>
+    <title>Landing Page</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+            rel="stylesheet">
+    <link rel="stylesheet" href="../../css/navbar.css">
     <link rel="stylesheet" href="../../css/doarPlanta.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
+<input id="close-menu" class="close-menu" type="checkbox" aria-label="Fechar menu" role="button">
+<label class="close-menu-label" for="close-menu" title="Menu"></label>
+<aside class="menu white-bg">
+    <div class="main-content menu-content">
+        <h1 onclick="getElementById('close-menu').checked = false;">
+            <a href="#inicio-web">DOAÇÃO DE PLANTAS</a>
+        </h1>
+
+        <nav>
+            <ul onclick="getElementById('close-menu').checked = false;">
+                <li><a href="/listagemDePlantas">Adotar Plantas</a></li>
+                <li><a href="/doarPlanta">Doar Plantas</a></li>
+                <li><a th:href="@{/editarUsuario/{id}(id=${userId})}">Atualizar Dados</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </nav>
+    </div>
+</aside>
+
+
 <div class="TopleftBackground"></div>
 <div class="BottomrightBackground"></div>
 <div class="login-container">
