Criação das telas de recuperação de senha

--- a/src/main/resources/templates/logins/login.html
+++ b/src/main/resources/templates/logins/login.html
@@ -26,7 +26,7 @@
             <p th:text="${erro}"></p>
         </div>
         <button type="submit">Entrar</button>
-        <p><a href="#">Esqueceu a senha?</a></p>
+        <p><a href="/recuperarSenha">Esqueceu a senha?</a></p>
     </form>
 </div>
 </body>
