Configuração das telas de login finalizadas

--- a/src/main/resources/templates/pages/senhaRecuperar.html
+++ b/src/main/resources/templates/pages/senhaRecuperar.html
@@ -14,8 +14,8 @@
     <h2>Insira o código de recuperação</h2>
     <form action="/recuperarSenha/informarEmail/atualizarSenha" method="GET">
         <div class="input-group">
-            <label for="username">Código</label>
-            <input type="text" id="username" name="username" required>
+            <label for="code">Código</label>
+            <input type="text" id="code" name="code" required>
         </div>
         <button type="submit">Confirmar</button>
     </form>
