Autorização de página na recuperação de senha

--- a/src/main/resources/templates/pages/recuperarSenha.html
+++ b/src/main/resources/templates/pages/recuperarSenha.html
@@ -19,6 +19,12 @@
     </div>
     <button type="submit">Enviar Código de Recuperação</button>
   </form>
+  <script th:inline="javascript">
+    var alertMessage = /*[[${alertMessage}]]*/ '';
+    if(alertMessage){
+        alert(alertMessage);
+    }
+  </script>
 </div>
 </body>
 </html>
