--- a/src/main/resources/templates/pages/recuperarSenha.html
+++ b/src/main/resources/templates/pages/recuperarSenha.html
@@ -12,7 +12,8 @@
 <div class="BottomrightBackground"></div>
 <div class="login-container">
   <h2>Recuperação de senha</h2>
-  <form action="/recuperarSenha/informarEmail" method="GET">
+  <form action="/recuperarSenha/informarEmail" method="POST">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
     <div class="input-group">
       <label for="username">E-mail</label>
       <input type="text" id="username" name="username" required>
