--- a/src/main/resources/templates/pages/senhaRecuperar.html
+++ b/src/main/resources/templates/pages/senhaRecuperar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,8 @@
 <div class="BottomrightBackground"></div>
 <div class="login-container">
     <h2>Insira o código de recuperação</h2>
-    <form action="/recuperarSenha/informarEmail/atualizarSenha" method="GET">
+    <form action="/recuperarSenha/informarEmail/atualizarSenha" method="POST">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <div class="input-group">
             <label for="code">Código</label>
             <input type="text" id="code" name="code" required>
