Lógica do botão de doação de plana finalizado

--- a/src/main/resources/templates/pages/MainScreen.html
+++ b/src/main/resources/templates/pages/MainScreen.html
@@ -46,7 +46,7 @@
                 <h2 th:text="${planta.nome}"></h2>
                 <p th:text="${planta.descricao}"></p>
                 <div class="button-container">
-                    <a href="/" class="button">Adotar Planta</a>
+                    <a th:href="@{/listagemDePlantas/informacoes/{id}(id=${planta.id})}" class="button">Adotar Planta</a>
                 </div>
             </div>
         </td>
