--- a/src/main/resources/static/css/cadastro.css
+++ b/src/main/resources/static/css/cadastro.css
@@ -46,13 +46,15 @@ body {
 }
 
 .cadastro-container {
+    text-align: center;
     background-color: #fff;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 900px;
-    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 1;
+    max-width: 500px;
+    margin: 0 auto;
 }
 
 h2 {
