--- a/src/main/resources/templates/pages/adotarPlanta.html
+++ b/src/main/resources/templates/pages/adotarPlanta.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Cadastro</title>
     <link rel="stylesheet" href="../../css/cadastro.css">
+    <link rel="stylesheet" href="../../css/adotarPlanta.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -15,7 +16,7 @@
 
     <td>
         <div class="plant-card">
-            <img th:src="@{'/listagemDePlantas/plantasDisponiveis/' + ${infoPlanta.caminhoImg}}" alt="Imagem da planta">
+            <img class="plant-image" th:src="@{/listagemDePlantas/informacoesPlanta}" alt="Imagem da planta">
         </div>
     </td>
 
