--- a/src/main/resources/templates/pages/adotarPlanta.html
+++ b/src/main/resources/templates/pages/adotarPlanta.html
@@ -18,6 +18,9 @@
         <div class="plant-card">
             <img class="plant-image" th:src="@{/listagemDePlantas/informacoesPlanta}" alt="Imagem da planta">
         </div>
+        <div class="button-container">
+            <a th:href="@{/listagemDePlantas/informacoes/{id}}" class="button">Adotar Planta</a>
+        </div>
     </td>
 
 </div>
