Comecei a desenvolver a lógica responsavel pela doação de plantas

--- a/src/main/resources/templates/pages/adotarPlanta.html
+++ b/src/main/resources/templates/pages/adotarPlanta.html
@@ -19,7 +19,7 @@
             <img class="plant-image" th:src="@{/listagemDePlantas/informacoesPlanta}" alt="Imagem da planta">
         </div>
         <div class="button-container">
-            <a th:href="@{/listagemDePlantas/informacoes/{id}}" class="button">Adotar Planta</a>
+            <a href="/listagemDePlantas/informacoes/adotarPlanta" class="button">Adotar Planta</a>
         </div>
     </td>
 
