Ajustes na lógica de doação

--- a/src/main/resources/templates/pages/escolhaDoar.html
+++ b/src/main/resources/templates/pages/escolhaDoar.html
@@ -21,7 +21,7 @@
   <td>
     <div class="button-container">
       <a href="/inicio" class="button">Sim</a>
-      <a href="/inicio" class="button">Não</a>
+      <a href="/doacaoNegada" class="button">Não</a>
     </div>
   </td>
 
