Criação da lógica para se doar plantas

--- a/src/main/resources/static/css/cadastro.css
+++ b/src/main/resources/static/css/cadastro.css
@@ -83,6 +83,17 @@ h2 {
     border-radius: 4px;
 }
 
+label {
+    margin-bottom: 8px;
+    font-weight: bold;
+}
+
+input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
 button {
     width: 100%;
     padding: 10px;
