Ajuste de código

--- a/src/main/resources/templates/pages/confirmarDados.html
+++ b/src/main/resources/templates/pages/confirmarDados.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,11 +16,12 @@
     <p>Essas informações, serão enviadas ao adotante. Após confirmar os dados, espere ele entrar em contato com você.</p>
     <br>
     <br>
-    <form action="cadastro" method="POST">
+    <form action="#" method="POST" th:object="${dadosDoador}">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <div class="form-grid-dados">
             <div class="input-group">
                 <label for="nome_planta">Nome da Planta</label>
-                <input type="text" id="nome_planta" name="nome_planta" required>
+                <input type="text" id="nome_planta" name="nome_planta" required th:field="*{nomePlanta}">
             </div>
             <div class="input-group">
                 <label for="enderecoRetira">Endereço de retirada</label>
@@ -28,11 +29,11 @@
             </div>
             <div class="input-group">
                 <label for="numWhatsApp">Número WhatsApp</label>
-                <input type="text" id="numWhatsApp" name="numWhatsApp" required>
+                <input type="text" id="numWhatsApp" name="numWhatsApp" required th:field="*{numWhatsApp}">
             </div>
             <div class="input-group">
                 <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required th:field="*{email}">
             </div>
         </div>
         <br>
