--- a/src/main/resources/templates/pages/escolhaDoar.html
+++ b/src/main/resources/templates/pages/escolhaDoar.html
@@ -20,7 +20,7 @@
   <br>
   <td>
     <div class="button-container">
-      <a href="/confirmarDados" class="button">Sim</a>
+      <a href="/conferirInformacao" class="button">Sim</a>
       <a href="/doacaoNegada" class="button">Não</a>
     </div>
   </td>
