--- a/src/main/resources/static/css/adotarPlanta.css
+++ b/src/main/resources/static/css/adotarPlanta.css
@@ -17,3 +17,21 @@
     margin: auto;
     border: none;
 }
+
+.button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
+    text-decoration: none;
+}
+
+.button:hover {
+    background-color: #45a049;
+}
