--- a/src/main/resources/static/css/cadastro.css
+++ b/src/main/resources/static/css/cadastro.css
@@ -111,6 +111,26 @@ button:hover {
     background-color: #45a049;
 }
 
+/*Código responsável pela estilização dos botões presentes na página escolharDoar.html*/
+.button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 4px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 20px;
+    text-decoration: none;
+}
+
+.button:hover {
+    background-color: #45a049;
+}
+
+
 @media (max-width: 600px) {
     .TopleftBackground, .BottomrightBackground {
         display: none;
