Ajustes de código

--- a/src/main/resources/templates/pages/confirmarDados.html
+++ b/src/main/resources/templates/pages/confirmarDados.html
@@ -41,7 +41,7 @@
             <label for="descricao">Observação</label>
             <textarea id="descricao" name="descricao" rows="4" th:field="*{obs}" required></textarea>
         </div>
-        <button type="submit">Cadastrar</button>
+        <button type="submit">Confirmar</button>
     </form>
 </div>
 </body>
