--- a/src/main/resources/templates/pages/adotarPlanta.html
+++ b/src/main/resources/templates/pages/adotarPlanta.html
@@ -20,10 +20,14 @@
         </div>
         <br>
         <div class="button-container">
-            <a href="/listagemDePlantas/informacoes/adotarPlanta" class="button">Adotar Planta</a>
+            <form action="/listagemDePlantas/informacoes/adotarPlanta" method="GET">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <button type="submit" class="button">Adotar Planta</button>
+            </form>
+            <div th:text="${mensagem}"></div>
         </div>
     </td>
-
 </div>
+
 </body>
 </html>
