--- a/src/main/resources/templates/pages/atualizacaoDeDados.html
+++ b/src/main/resources/templates/pages/atualizacaoDeDados.html
@@ -82,6 +82,10 @@
                 <label for="senha">Senha</label>
                 <input type="password" id="senha" name="senha" required th:field="*{senha}">
             </div>
+            <div class="input-group">
+                <label for="confirmarSenha">Confirmar Senha</label>
+                <input type="password" id="confirmarSenha" name="confirmarSenha" required>
+            </div>
         </div>
         <button type="submit">Cadastrar</button>
     </form>
@@ -105,17 +109,29 @@
     $('#telefone').mask('(00) 0000-0000');
     $('#cep').mask('00000-000');
 
-    // Verificação de confirmação de senha
-    $('form').on('submit', function (e) {
-        const senha = $('#senha').val();
-        const confirmarSenha = $('#confirmarSenha').val();
+    // Confirmar senha
+    $('#senha').on('submit', function (e) {
+        let senha = $('#senha').val();
+        let confirmarSenha = $('#confirmarSenha').val();
 
         if (senha !== confirmarSenha) {
-            e.preventDefault(); // Impede o envio do formulário
+            e.preventDefault();
             $('#confirmarSenha')[0].setCustomValidity("As senhas não conferem");
+        } else {
+            $('#confirmarSenha')[0].setCustomValidity("");
         }
     });
 
+    $('#senha, #confirmarSenha').on('input', function () {
+        let senha= $('#senha').val();
+        let confirmarSenha = $('#confirmarSenha').val();
+
+        if (senha && confirmarSenha && senha !== confirmarSenha) {
+            $('#confirmarSenha')[0].setCustomValidity("As senhas não conferem");
+        } else {
+            $('#confirmarSenha')[0].setCustomValidity("");
+        }
+    });
 </script>
 
 </body>
